--- a/config_example.json
+++ b/config_example.json
@@ -1,5 +1,7 @@
 {
     "from_email": "your_send@email.com",
     "target": ["your_recieve_1@email.com","your_recieve_2@email.com"],
-    "password": "password"
+    "password": "password",
+    "smtp": "smtp.163.com",
+    "port": 25
 }
