--- a/config_example.json
+++ b/config_example.json
@@ -3,5 +3,7 @@
     "target": ["your_recieve_1@email.com","your_recieve_2@email.com"],
     "password": "password",
     "smtp": "smtp.163.com",
-    "port": 25
+    "port": 994,
+    "pushplus_token":null,
+    "webhook":null
 }
